# rust-todo-cli

./: Cargo.toml  docker-compose.yaml
src/: database.rs  main.rs
