[package]
name = "rust-todo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.7", features = ["derive"] }
dotenv = "0.15.0"
serde = { version = "1.0.190", features = ["derive"] }
sqlx = { version = "0.7.2", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.33.0", features = ["full"] }
